[metadata]
name = alexcode
author = Kamenialexnea
author_email = Kamenialexnea@gmail.com
version = attr: codewards.__version__
description = Code from different context
long_description = file: README.md
keywords = codewards, leet code
license = Other/Proprietary License
url = https://github.com/KameniAlexNea/codewards
classifiers = 
    DevelopmentStatus :: 3 - Alpha
    License :: Other/Proprietary License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages =
    codewards
install_requires =
    pytest
